working version without parallelism